// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel renders correctly 1`] = `
<div
  className="widget-carousel"
>
  <div
    className="swiper"
  >
    <ul
      className="swiper-wrapper"
    >
      <li
        aria-hidden={false}
        className="swiper-slide"
        id="carousel-slide-Carousel-1"
        onLoad={[Function]}
      >
        <div>
          test1
        </div>
      </li>
      <li
        aria-hidden={true}
        className="swiper-slide"
        id="carousel-slide-Carousel-2"
        onLoad={[Function]}
      >
        <div>
          test2
        </div>
      </li>
    </ul>
    <div
      className="swiper-button-prev"
    />
    <div
      className="swiper-button-next"
    />
    <div
      className="swiper-pagination"
    />
  </div>
</div>
`;

exports[`Carousel renders correctly without navigation 1`] = `
<div
  className="widget-carousel"
>
  <div
    className="swiper"
  >
    <ul
      className="swiper-wrapper"
    >
      <li
        aria-hidden={false}
        className="swiper-slide"
        id="carousel-slide-Carousel-1"
        onLoad={[Function]}
      >
        <div>
          test1
        </div>
      </li>
      <li
        aria-hidden={true}
        className="swiper-slide"
        id="carousel-slide-Carousel-2"
        onLoad={[Function]}
      >
        <div>
          test2
        </div>
      </li>
    </ul>
    <div
      className="swiper-pagination"
    />
  </div>
</div>
`;

exports[`Carousel renders correctly without pagination 1`] = `
<div
  className="widget-carousel"
>
  <div
    className="swiper"
  >
    <ul
      className="swiper-wrapper"
    >
      <li
        aria-hidden={false}
        className="swiper-slide"
        id="carousel-slide-Carousel-1"
        onLoad={[Function]}
      >
        <div>
          test1
        </div>
      </li>
      <li
        aria-hidden={true}
        className="swiper-slide"
        id="carousel-slide-Carousel-2"
        onLoad={[Function]}
      >
        <div>
          test2
        </div>
      </li>
    </ul>
    <div
      className="swiper-button-prev"
    />
    <div
      className="swiper-button-next"
    />
  </div>
</div>
`;
